--- a/Stone/LaunchScreen.storyboard
+++ b/Stone/LaunchScreen.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -17,38 +18,38 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Gradient" translatesAutoresizingMaskIntoConstraints="NO" id="yuy-cO-uTb">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                            </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchIcon" translatesAutoresizingMaskIntoConstraints="NO" id="JmU-hd-2dl">
-                                <rect key="frame" x="96" y="152" width="182" height="224"/>
-                            </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchTitle" translatesAutoresizingMaskIntoConstraints="NO" id="vBI-mT-wRt">
-                                <rect key="frame" x="56" y="462" width="263" height="52"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Vg-bJ-n9T">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="333"/>
+                                <color key="backgroundColor" red="0.16078431372549018" green="0.30196078431372547" blue="0.40392156862745099" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="1Vg-bJ-n9T" secondAttribute="height" multiplier="125:111" id="4mF-WS-v5D"/>
+                                </constraints>
+                            </view>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Fatty" translatesAutoresizingMaskIntoConstraints="NO" id="4Vn-Nr-far">
+                                <rect key="frame" x="0.0" y="146" width="375" height="375"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="4Vn-Nr-far" secondAttribute="height" multiplier="1:1" id="lho-pf-be8"/>
+                                </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.16078431369999999" green="0.16078431369999999" blue="0.16078431369999999" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="yuy-cO-uTb" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="6J9-Qj-uHi"/>
-                            <constraint firstAttribute="trailing" secondItem="yuy-cO-uTb" secondAttribute="trailing" id="KDl-gd-mMU"/>
-                            <constraint firstItem="vBI-mT-wRt" firstAttribute="top" secondItem="JmU-hd-2dl" secondAttribute="bottom" constant="86" id="LWN-HL-1gp"/>
-                            <constraint firstItem="yuy-cO-uTb" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="NdK-Ct-g6d"/>
-                            <constraint firstItem="JmU-hd-2dl" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="RYe-ad-wuK"/>
-                            <constraint firstItem="yuy-cO-uTb" firstAttribute="bottom" secondItem="xb3-aO-Qok" secondAttribute="top" id="Yeh-Oh-1F1"/>
-                            <constraint firstItem="vBI-mT-wRt" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="ggb-Wn-kF3"/>
-                            <constraint firstItem="JmU-hd-2dl" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="132" id="hWh-VP-YMB"/>
+                            <constraint firstItem="1Vg-bJ-n9T" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="1oZ-Pk-KH1"/>
+                            <constraint firstItem="4Vn-Nr-far" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="Ik8-NB-igM"/>
+                            <constraint firstItem="4Vn-Nr-far" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="MCV-NT-ZXI"/>
+                            <constraint firstItem="1Vg-bJ-n9T" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" id="VLu-PA-jtP"/>
+                            <constraint firstItem="1Vg-bJ-n9T" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="-20" id="jOy-Ro-Pr7"/>
+                            <constraint firstItem="4Vn-Nr-far" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" id="z2d-JQ-sq6"/>
                         </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-23" y="363"/>
+            <point key="canvasLocation" x="-23.5" y="362.5"/>
         </scene>
     </scenes>
     <resources>
-        <image name="Gradient" width="375" height="667"/>
-        <image name="LaunchIcon" width="182" height="224"/>
-        <image name="LaunchTitle" width="263" height="52"/>
+        <image name="Fatty" width="1024" height="1024"/>
     </resources>
 </document>
