--- a/Stone/SplashScreenViewController.xib
+++ b/Stone/SplashScreenViewController.xib
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SplashScreenViewController" customModule="Stone" customModuleProvider="target">
             <connections>
-                <outlet property="iconView" destination="68w-rh-mPs" id="qA1-e2-6Ox"/>
+                <outlet property="iconView" destination="hqn-Hh-47h" id="SgU-mV-ioQ"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -16,34 +17,39 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Gradient" translatesAutoresizingMaskIntoConstraints="NO" id="uDi-N5-BTs">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Fatty" translatesAutoresizingMaskIntoConstraints="NO" id="hqn-Hh-47h">
+                    <rect key="frame" x="0.0" y="146" width="375" height="375"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="hqn-Hh-47h" secondAttribute="height" multiplier="1:1" id="jmf-X7-sS8"/>
+                    </constraints>
                 </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchIcon" translatesAutoresizingMaskIntoConstraints="NO" id="68w-rh-mPs">
-                    <rect key="frame" x="96" y="152" width="182" height="224"/>
-                </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchTitle" translatesAutoresizingMaskIntoConstraints="NO" id="Q65-qa-QGG">
-                    <rect key="frame" x="56" y="462" width="263" height="52"/>
-                </imageView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Alp-0V-LHH">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="333"/>
+                    <color key="backgroundColor" red="0.16078431369999999" green="0.30196078430000001" blue="0.4039215686" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="Alp-0V-LHH" secondAttribute="height" multiplier="125:111" id="i9I-rb-EdY"/>
+                    </constraints>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="layer.zPosition">
+                            <integer key="value" value="-5"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                </view>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="0.16078431369999999" green="0.16078431369999999" blue="0.16078431369999999" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstItem="68w-rh-mPs" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="18d-fp-hEd"/>
-                <constraint firstAttribute="trailing" secondItem="uDi-N5-BTs" secondAttribute="trailing" id="CLp-8B-Tyk"/>
-                <constraint firstItem="uDi-N5-BTs" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="JR2-f7-mbz"/>
-                <constraint firstItem="Q65-qa-QGG" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="PKE-9w-ezt"/>
-                <constraint firstItem="68w-rh-mPs" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="152" id="jZ1-Tz-9rg"/>
-                <constraint firstAttribute="bottom" secondItem="uDi-N5-BTs" secondAttribute="bottom" id="wgz-9W-YH9"/>
-                <constraint firstItem="uDi-N5-BTs" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="y1h-cB-H4z"/>
-                <constraint firstItem="Q65-qa-QGG" firstAttribute="top" secondItem="68w-rh-mPs" secondAttribute="bottom" constant="86" id="zhr-vX-g0n"/>
+                <constraint firstItem="hqn-Hh-47h" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="1Ym-T1-N6M"/>
+                <constraint firstItem="hqn-Hh-47h" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="9TX-eO-zH0"/>
+                <constraint firstItem="hqn-Hh-47h" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Hi3-CY-0tk"/>
+                <constraint firstItem="Alp-0V-LHH" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="Hjn-g1-lfA"/>
+                <constraint firstItem="Alp-0V-LHH" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="b9Q-2f-6Mj"/>
+                <constraint firstItem="Alp-0V-LHH" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="okj-iJ-Ter"/>
             </constraints>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
             <point key="canvasLocation" x="305.5" y="304.5"/>
         </view>
     </objects>
     <resources>
-        <image name="Gradient" width="375" height="667"/>
-        <image name="LaunchIcon" width="182" height="224"/>
-        <image name="LaunchTitle" width="263" height="52"/>
+        <image name="Fatty" width="1024" height="1024"/>
     </resources>
 </document>
