--- a/Stone/LaunchScreen.storyboard
+++ b/Stone/LaunchScreen.storyboard
@@ -18,28 +18,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Vg-bJ-n9T">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="333"/>
-                                <color key="backgroundColor" red="0.16078431372549018" green="0.30196078431372547" blue="0.40392156862745099" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="1Vg-bJ-n9T" secondAttribute="height" multiplier="125:111" id="4mF-WS-v5D"/>
-                                </constraints>
-                            </view>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Fatty" translatesAutoresizingMaskIntoConstraints="NO" id="4Vn-Nr-far">
-                                <rect key="frame" x="0.0" y="146" width="375" height="375"/>
+                                <rect key="frame" x="137" y="284" width="100" height="100"/>
                                 <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="Jpy-yZ-UJh"/>
                                     <constraint firstAttribute="width" secondItem="4Vn-Nr-far" secondAttribute="height" multiplier="1:1" id="lho-pf-be8"/>
                                 </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="0.16078431369999999" green="0.16078431369999999" blue="0.16078431369999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="1Vg-bJ-n9T" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="1oZ-Pk-KH1"/>
                             <constraint firstItem="4Vn-Nr-far" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="Ik8-NB-igM"/>
                             <constraint firstItem="4Vn-Nr-far" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="MCV-NT-ZXI"/>
-                            <constraint firstItem="1Vg-bJ-n9T" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" id="VLu-PA-jtP"/>
-                            <constraint firstItem="1Vg-bJ-n9T" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="-20" id="jOy-Ro-Pr7"/>
-                            <constraint firstItem="4Vn-Nr-far" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" id="z2d-JQ-sq6"/>
                         </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
@@ -50,6 +40,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Fatty" width="1024" height="1024"/>
+        <image name="Fatty" width="375" height="375"/>
     </resources>
 </document>
